# contextStill

./: $test_file  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.jp.md  README.md  SECURITY.md  SUPPORT.md  biome.json  coverage.json  docker-compose.yml  drizzle.config.ts  hooks.json.example  implementation_plan.md  index.html  package.json  plan.md  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
crates/context-stilld/: Cargo.toml
crates/context-stilld/src/: lib.rs  main.rs
crates/context-stilld/src/domains/: mod.rs
crates/context-stilld/src/domains/admin_api_lifecycle/: routing.rs  service.rs
crates/context-stilld/src/domains/agent_log_sync/: ingest.rs  mod.rs  roots.rs  routing.rs  schema_agent_log_sync.sql  service.rs  service_tests.rs  store.rs  types.rs
crates/context-stilld/src/domains/backup/: routing.rs  service.rs
crates/context-stilld/src/domains/bootstrap/: repository.rs  service.rs
crates/context-stilld/src/domains/cli/: routing.rs  service.rs
crates/context-stilld/src/domains/daemon/: repository.rs  service.rs
crates/context-stilld/src/domains/doctor/: mod.rs  routing.rs  service.rs
crates/context-stilld/src/domains/mcp_lifecycle/: dispatch.rs  endpoint_server.rs  endpoint_server_tests.rs  endpoint_sessions.rs  mod.rs  native_common.rs  native_compile.rs  (+12 more)
crates/context-stilld/src/shared/: config.rs  errors.rs  fs_paths.rs  mod.rs  process.rs
crates/sqlite-vec/: Cargo.toml  README.md  sqlite-vec.h
crates/sqlite-vec/src/: lib.rs
(+1168 files in other folders)
