[package]
name = "context-stilld"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ctrlc = { version = "3.5", features = ["termination"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlite-vec = { path = "../sqlite-vec" }
