[package]
name = "sqlite-vec"
version = "0.1.10-alpha.4"
edition = "2021"
authors = ["Alex Garcia <alexsebastian.garcia@gmail.com>"]
description = "Vendored FFI bindings to the sqlite-vec SQLite extension"
homepage = "https://github.com/asg017/sqlite-vec"
repository = "https://github.com/asg017/sqlite-vec"
keywords = ["sqlite", "sqlite-extension"]
license = "MIT OR Apache-2.0"

[lib]
name = "sqlite_vec"
path = "src/lib.rs"

[build-dependencies]
cc = "1.0"
